# Borg-Agent-Orchestrator

./: .gitignore  .venv  Agents.md  GEMINI.md  NEXT_STEPS.md  README.md
codex_autonomy/: .gitignore  AGENTS.md  AUTONOMY_RUNBOOK.md  NEXT_STEPS.md  README.md  SETUP_COPY_SAFE.md  TRACKING_STEPS.md  pyproject.toml
codex_autonomy/codex_autonomy/: __init__.py  cli.py  config.py  github_flow.py  guardian.py  health.py  manager.py  models.py  session_adapter.py  state_db.py  status.py  task_store.py  worker.py  worktree.py
codex_autonomy/codex_autonomy_runner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
codex_autonomy/config/: autonomy.example.yaml
codex_autonomy/scripts/: install_guardian_launchd.py  run_daemon.py  run_guardian.py  stream_events.py  stream_progress.py  stream_sessions.py
codex_autonomy/task_journal/: orchestrator-e2e-final-gate.md  orchestrator-e2e-gate-doc-sync.md  orchestrator-e2e-gate-followups.md  orchestrator-e2e-gate-runtime.md  orchestrator-fixups-and-errors.md  orchestrator-optuna-meta-tuning.md  orchestrator-rllib-referee.md  orchestrator-scoreboard-feedback.md  orchestrator-simulator-features.md  orchestrator-xgboost-observation.md
orchestrator_stack/: .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_EXPLAINED.md  MILESTONE_JOURNEY.md  NEXT_STEPS.md  README.md  architecture.mmd  process_flow.mmd  pyproject.toml  requirements.txt  run.py
orchestrator_stack/borg_full_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
orchestrator_stack/config/: orchestrator.example.json  (+1 more)
(+207 files in other folders)
