[project]
name = "codex-autonomy-runner"
version = "0.1.0"
description = "Local autonomous Codex session supervisor"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0,<7.0",
]

[project.scripts]
codex-autonomy = "codex_autonomy.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
